--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,31 @@
-# SQLite version 3.x
-#   gem install sqlite3
+# Postgresql version 9.x
+#   gem install pg
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+#   Ensure the Postgresql 9.x gem is defined in your Gemfile
+#   gem 'pg'
+development: &development
+  adapter: postgresql
+  encoding: utf8
+  database: practice_task_manager_development
+  username: postgres
+  host: localhost
+  port: 5432
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: utf8
+  database: practice_task_manager_test
+  username: postgres
+  host: localhost
+  port: 5432
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  encoding: utf8
+  database: practice_task_manager_production
+  username: postgres
+  host: localhost
+  port: 5432
